--- a/website/index.html
+++ b/website/index.html
@@ -17,7 +17,7 @@
                     <input type="text" id="filter-input" placeholder="Filter by keywords...">
                     <button id="filter-button"><i class="fas fa-search"></i></button>
                 </div>
-                <div class="filter-instructions">Try searching: politics, astronomy, climate</div>
+                <div class="filter-instructions">Try searching: politics, wellness, astronomy</div>
             </div>
         </header>
         <main>
@@ -29,6 +29,17 @@
             <i class="fas fa-arrow-left"></i> Swipe left to dislike | Swipe right to like <i class="fas fa-arrow-right"></i>
         </div>
     </div>
+
+    <!-- Modal for embedded social media content -->
+    <div id="account-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-modal">&times;</span>
+            <h2 id="modal-username"></h2>
+            <div id="embedded-content"></div>
+        </div>
+    </div>
+
+    <script src="data.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
