--- a/website/index.html
+++ b/website/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://hammerjs.github.io/dist/hammer.min.js"></script>
+    <!-- Twitter widget API script - loaded early for better initialization -->
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 <body>
     <div class="container">
@@ -17,11 +19,11 @@
                     <input type="text" id="filter-input" placeholder="Filter by keywords...">
                     <button id="filter-button"><i class="fas fa-search"></i></button>
                 </div>
-                <!-- New suggestion buttons container -->
+                <!-- Search suggestion buttons container -->
                 <div id="search-suggestions" class="search-suggestions"></div>
                 <div class="filter-instructions">Try searching: politics, wellness, astronomy</div>
             </div>
-            <!-- Replaced buttons with a toggle switch -->
+            <!-- Toggle switch for friends/all -->
             <div class="view-toggle-container">
                 <span>Friends Only</span>
                 <label class="switch">
