--- a/website/public/index.html
+++ b/website/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Media Curation System</title>
+    <title>Social Media Curation System - Soc3</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="profile-editor.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header class="landing-header">
-            <h1>Social Media Curation System</h1>
+            <h1>Social Media Curation System - Soc 3</h1>
             <p class="subtitle">Personalize your feed with your preferences and interests</p>
         </header>
 
